LFHCDESK-76: New enter data on past visit should be listed on the top 	modified:   api/src/main/resources/messages.properties Correcting message spelling mistake
	modified:   omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
Correcting the uiinclude wrong script name

--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -28,7 +28,7 @@
 
 
 	<ifMode mode="enter">
-		<uiInclude provider="lfhcforms" javascript="encounterDate.js"/>
+		<uiInclude provider="lfhcforms" javascript="editEncounterDate.js"/>
 		<script type="text/javascript" id="handleViewMode">
 
 			var displayToast = true
