LFHCDESK-43 	modified:   omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html

--- a/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
@@ -298,7 +298,7 @@ formDisplayStyle="Simple"
 												</span>
 												<obsgroup groupingConceptId="LFHC:1013">
 													<p>
-														<obs id="198" conceptId="LFHC:1008" answerConceptId="CIEL:309" style="checkbox"/>
+														<obs id="198" conceptId="LFHC:1008" answerConceptId="LFHC:1012" style="checkbox"/>
 														<obs id="199" conceptId="LFHC:1012"/>
 													</p>
 													<p>
@@ -486,12 +486,12 @@ formDisplayStyle="Simple"
 		<fieldset>
 			<h3>X-Ray procedure ordered: </h3>
 			<p>
-				<obs id="other-source" conceptId="CIEL:309" style="checkbox" />
+				<obs id="other-source" conceptId="LFHC:1012" style="checkbox" />
 				<obs conceptId="LFHC:1012" style="checkbox" />
 			</p>
 			<obsgroup groupingConceptId="LFHC:1013" style="display:none;">
 				<p>
-					<obs id="309-other-source" conceptId="LFHC:1008" answerConceptId="CIEL:309" />
+					<obs id="309-other-source" conceptId="LFHC:1008" answerConceptId="LFHC:1012" />
 				</p>
 				<p>
 					<obs id="other-target" conceptId="LFHC:1012" />
@@ -556,7 +556,7 @@ formDisplayStyle="Simple"
 			</p>
 			<obsgroup groupingConceptId="LFHC:1016" style="display:none;">
 				<p>
-					<obs id="309-other-source" conceptId="LFHC:1009" answerConceptId="LFHC:1230" />
+					<obs id="999-other-source" conceptId="LFHC:1009" answerConceptId="LFHC:1230" />
 				</p>
 				<p>
 					<obs id="other-target" conceptId="LFHC:1230" />
