LFHCDESK-21: Lab test order form
	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html
Update concept obsgroup

--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -162,7 +162,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -209,7 +209,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -262,7 +262,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -302,7 +302,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -352,7 +352,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -398,7 +398,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -438,7 +438,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -477,7 +477,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -518,7 +518,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -566,7 +566,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -619,7 +619,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -669,7 +669,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -708,7 +708,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -749,7 +749,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
@@ -790,7 +790,7 @@
 			<repeat>
 				<template>
 					<div class="hiddenObs" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:1271">
+						<obsgroup groupingConceptId="LFHC:1276">
 							<p>
 								<obs id="{n}" class="toCheck" conceptId="CIEL:1271" answerConceptId="{m}"/>
 							</p>
