LFHCDESK-95: Diagnosis form not save
	modified:   omod/src/main/webapp/resources/htmlforms/diagnosis.html
Remove the "required=true" argument for diagnosis classification

--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -99,7 +99,7 @@ formDisplayStyle="Simple"
 							</summary>
 							<p>
 								Diagnosis classification
-								<obs id="{n}-opt1" conceptId="CIEL:159946" required="true"/>
+								<obs id="{n}-opt1" conceptId="CIEL:159946" />
 							</p>
 						</details>
 						<br/>
